[package]
name = "rsp_their_bi_dir_channel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
msg_local_macro = { path = "../../msg_local_macro" }
msg_header = { path = "../../msg_header" }
uuid = { version = "1.3.0", features = ["serde"] }
actor_bi_dir_channel = { version = "0.1.0", path = "../../actor_bi_dir_channel" }
